--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
     <script>
-      AOS.init();
+      AOS.init({once: true});
     </script>
     <script
       type="text/javascript"
